添加setting界面，布局

--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -43,7 +43,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ylj.main.MenuActivity" />
         </activity>
-
         <activity
             android:name=".adjust.AdjustLightActivity"
             android:label="@string/title_activity_adjust_heavy"
@@ -79,6 +78,15 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".task.NewTaskActivity" />
+        </activity>
+        <activity
+            android:name=".main.SettingActivity"
+            android:label="@string/title_activity_setting"
+            android:parentActivityName=".main.MenuActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ylj.main.MenuActivity" />
         </activity>
     </application>
 
