--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -92,8 +92,8 @@
             android:name=".staff.StaffModifyActivity"
             android:label="@string/title_activity_staff_modify"
             android:parentActivityName=".staff.StaffManagerActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ylj.staff.StaffManagerActivity" />
@@ -111,8 +111,18 @@
             android:name=".staff.AdminModifyActivity"
             android:label="@string/title_activity_admin_modify"
             android:parentActivityName=".staff.StaffManagerActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ylj.staff.StaffManagerActivity" />
+        </activity>
+        <activity
+            android:name=".staff.PasswdModifyActivity"
+            android:label="@string/title_activity_passwd_modify"
+            android:parentActivityName=".staff.StaffManagerActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ylj.staff.StaffManagerActivity" />
