添加task 部分属性，实现taskmodify界面逻辑

--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
         <activity
             android:name=".connect.ConnectActivity"
             android:label="@string/title_activity_connect"
-            android:parentActivityName=".main.MenuActivity"
             android:launchMode="singleTop"
+            android:parentActivityName=".main.MenuActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -99,8 +99,8 @@
         <activity
             android:name=".staff.StaffManagerActivity"
             android:label="@string/title_activity_staff_manager"
-            android:parentActivityName=".main.MenuActivity"
             android:launchMode="singleTop"
+            android:parentActivityName=".main.MenuActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -127,6 +127,12 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ylj.main.MenuActivity" />
+        </activity>
+        <activity
+            android:name=".task.TaskModifyActivity"
+            android:label="@string/title_activity_task_modify"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" >
         </activity>
     </application>
 
