编写task manager基本框架

--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -134,6 +134,15 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" >
         </activity>
+        <activity
+            android:name=".task.TaskManagerActivity"
+            android:label="@string/title_activity_task_manager"
+            android:parentActivityName=".main.MenuActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ylj.main.MenuActivity" />
+        </activity>
     </application>
 
 </manifest>
