实现Adjustactivity、Adjustfragment逻辑（Adjustfragment中图形状态显示保存未完成）

--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -143,6 +143,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ylj.main.MenuActivity" />
         </activity>
+        <activity
+            android:name=".adjust.AdjustActivity"
+            android:label="@string/title_activity_adjust"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
