--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -30,60 +30,17 @@
             android:name=".connect.ConnectActivity"
             android:label="@string/title_activity_connect"
             android:launchMode="singleTop"
+            android:screenOrientation="landscape"
             android:parentActivityName=".main.MenuActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ylj.main.MenuActivity" />
-        </activity>
-        <activity
-            android:name=".task.NewTaskActivity"
-            android:label="@string/title_activity_new_task"
-            android:parentActivityName=".main.MenuActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.ylj.main.MenuActivity" />
-        </activity>
-        <activity
-            android:name=".adjust.AdjustLightActivity"
-            android:label="@string/title_activity_adjust_heavy"
-            android:parentActivityName=".task.NewTaskActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".task.NewTaskActivity" />
-        </activity>
-        <activity
-            android:name=".adjust.AdjustMiddleActivity"
-            android:label="@string/title_activity_adjust_heavy"
-            android:parentActivityName=".task.NewTaskActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".task.NewTaskActivity" />
-        </activity>
-        <activity
-            android:name=".adjust.AdjustHeavyActivity"
-            android:label="@string/title_activity_adjust_heavy"
-            android:parentActivityName=".task.NewTaskActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".task.NewTaskActivity" />
-        </activity>
-        <activity
-            android:name=".adjust.AdjustResultActivity"
-            android:label="@string/title_activity_adjust_heavy"
-            android:parentActivityName=".task.NewTaskActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".task.NewTaskActivity" />
         </activity>
         <activity
             android:name=".setting.SettingActivity"
             android:label="@string/title_activity_setting"
+            android:screenOrientation="landscape"
             android:parentActivityName=".setting.UserActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
@@ -93,6 +50,7 @@
         <activity
             android:name=".staff.StaffModifyActivity"
             android:label="@string/title_activity_staff_modify"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" >
         </activity>
@@ -100,6 +58,7 @@
             android:name=".staff.StaffManagerActivity"
             android:label="@string/title_activity_staff_manager"
             android:launchMode="singleTop"
+            android:screenOrientation="landscape"
             android:parentActivityName=".main.MenuActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
@@ -109,12 +68,14 @@
         <activity
             android:name=".staff.AdminModifyActivity"
             android:label="@string/title_activity_admin_modify"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name=".staff.PasswdModifyActivity"
             android:label="@string/title_activity_passwd_modify"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" >
         </activity>
@@ -122,6 +83,7 @@
             android:name=".setting.UserActivity"
             android:label="@string/title_activity_user"
             android:launchMode="singleTop"
+            android:screenOrientation="landscape"
             android:parentActivityName=".main.MenuActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
@@ -131,12 +93,14 @@
         <activity
             android:name=".task.TaskModifyActivity"
             android:label="@string/title_activity_task_modify"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name=".task.TaskManagerActivity"
             android:label="@string/title_activity_task_manager"
+            android:screenOrientation="landscape"
             android:parentActivityName=".main.MenuActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
@@ -146,7 +110,15 @@
         <activity
             android:name=".adjust.AdjustActivity"
             android:label="@string/title_activity_adjust"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".adjust.AdjustResultActivity"
+            android:label="@string/title_activity_adjust_result"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 
