--- a/yljapp/src/main/AndroidManifest.xml
+++ b/yljapp/src/main/AndroidManifest.xml
@@ -123,6 +123,7 @@
         <activity
             android:name=".task.TaskActivity"
             android:label="@string/title_activity_task"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
